--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 <!-- <h2 align="center"><spring:message code="label.register.header"/></h2> -->
-<h3 align="center">this is error specific page.
-Some problem has occurred,Please contact to web site administrator at email:admin.infotech@strave.com</h3>
+<h3 align="center">Some problem has occurred,Please contact to web site administrator at email:admin.infotech@strave.com</h3>
 <h2></h2>
 </body>
 </html>
