--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <span>welcome</span>
-
-
+<span th:text ="${name}" th:value ="${name}"></span>
+<span th:text ="${password}" th:value ="${password}"></span>
+<a href="/showListOfUser">back</a>
 </body>
 </html>
