--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,8 +7,8 @@
 <body>
 <font color="red">${errorMessage}</font>
 	<form action="/login" method="POST">
-		Name : <input name="name" type="text" /> 
-		Password : <input name="password" type="password" /> <input type="submit" />
+		Name : <input name="name" id="name" type="text" /> 
+		Password : <input name="password" id="password" type="password" /> <input type="submit" />
 	</form>
 </body>
 </html>
